# localtileserver

./: .buildinfo  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CNAME  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  env  environment.yml  example.ipynb  flask-tileserver.env  flask.env  genindex.html  hillshade.py  ignore_words.txt  index.html  jupyter.Dockerfile  justfile  objects.inv  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_jupyter.txt  requirements_style.txt  requirements_win.txt  search.html  searchindex.js  setup.py  version.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: doc.yml  ecr.yml  heroku.yml  lint.yml  package.yml  release.yml  test.yml
_sources/: index.rst.txt
_sources/api/: handlers.rst.txt  index.rst.txt  python-client.rst.txt
_sources/installation/: index.rst.txt
_sources/user-guide/: bokeh.rst.txt  compare.rst.txt  example-data.rst.txt  expressions.rst.txt  formats.rst.txt  in-memory.rst.txt  index.rst.txt  non-geo.rst.txt  rasterio.rst.txt  remote-cog.rst.txt  rgb.rst.txt  roi.rst.txt  spatial-subsets.rst.txt  statistics.rst.txt  validate_cog.rst.txt  web-app.rst.txt  webview-frontends.rst.txt  xarray.rst.txt
_static/: documentation_options.js
api/: client.html  examples.html  handlers.html  index.html  python-client.html  rest-api.html  utilities.html
binder/: postBuild  requirements.txt
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/_templates/: layout.html
doc/source/api/: client.rst  examples.rst  index.rst  rest-api.rst  utilities.rst
doc/source/installation/: docker.rst  flask.rst  index.rst  remote-jupyter.rst
doc/source/user-guide/: bokeh.rst  compare.rst  docker.rst  example-data.rst  expressions.rst  formats.rst  hillshade.rst  in-memory.rst  index.rst  ipyleaflet_deep_zoom.rst  mosaic.rst  non-geo.rst  rasterio.rst  remote-cog.rst  rest-api.rst  rgb.rst  roi.rst  spatial-subsets.rst  stac.rst  statistics.rst  stretch.rst  validate_cog.rst  webview-frontends.rst
examples/: README.md  example.ipynb  hillshade.ipynb  url_cog.ipynb
installation/: docker.html  flask.html  index.html  remote-jupyter.html
jupyter-config/jupyter_server_config.d/: localtileserver.json
localtileserver/: __init__.py  __main__.py  _jupyter_loopback_bridge.py  _version.py  client.py  configure.py  examples.py  helpers.py  io.py  leaflet.py  manager.py  palettes.py  port.py  report.py  server.py  style.py  utilities.py  validate.py  widgets.py
localtileserver/_jupyter/: __init__.py
localtileserver/application/: __init__.py  blueprint.py  rest.py  style.py  urls.py  views.py  wsgi.py
localtileserver/application/static/js/: geojsControls.js
localtileserver/application/templates/: base.html  cesiumViewer.html
localtileserver/application/templates/_include/: geojs.html
localtileserver/custom/: lts_widget.css  lts_widget.js  widgets.py
localtileserver/data/: .gitignore  aws_elevation_tiles_prod.xml
localtileserver/tiler/: __init__.py  handler.py  mosaic.py  palettes.py  stac.py  style.py  utilities.py  xarray_handler.py
localtileserver/tiler/data/: __init__.py  bahamas_rgb.tif  co_elevation_roi.tif
localtileserver/tileserver/: __init__.py  application.py  blueprint.py  palettes.py  rest.py  sentry.py  style.py  urls.py  utilities.py  utils.py  views.py  wsgi.py
localtileserver/tileserver/data/: __init__.py  presidio.wkb
localtileserver/tileserver/static/js/: cesium.js  geojs.js  geojsControls.js
localtileserver/tileserver/static/styles/: cesium.css  geojs.css  snackbar.css  style.css
localtileserver/tileserver/templates/tileserver/: 404file.html  base.html  baseTileViewer.html  cesiumSplitViewer.html  cesiumViewer.html  exampleChoices.html  geojsViewer.html
localtileserver/web/: __init__.py  application.py  blueprint.py  fastapi_app.py  rest.py  sentry.py  urls.py  utils.py  views.py  wsgi.py
localtileserver/web/routers/: __init__.py  mosaic.py  stac.py  tiles.py  utils.py  xarray.py
localtileserver/web/static/js/: cesium.js  geojs.js  geojsControls.js
localtileserver/web/static/styles/: geojs.css
localtileserver/web/templates/tileserver/: base.html  baseTileViewer.html  cesiumSplitViewer.html  cesiumViewer.html  geojsViewer.html  splitForm.html
scripts/: build.sh  push.sh
tests/: conftest.py  test_app.py  test_client.py  test_client_extended.py  test_client_rest.py  test_concurrent.py  test_configure.py  test_examples.py  test_expressions.py  test_folium.py  test_gdal_prefixes.py  test_helpers.py  test_helpers_extended.py  test_jupyter_extension.py  test_jupyter_loopback_bridge.py  test_leaflet.py  test_mosaic.py  test_palettes.py  test_rasterio_env.py  test_remote.py  test_rendering.py  test_report.py  test_router_utils.py  test_save_file.py  test_stac.py  test_tile_client.py  test_tile_server.py  test_tiler_utilities.py  test_tiles_errors.py  test_utilities.py  test_vsi.py  test_xarray.py  utilities.py
tileserver/: __init__.py  __main__.py  _version.py  application.py  examples.py  large_image_utilities.py  leaflet.py  report.py  run.py  server.py  utilities.py
tileserver/application/: __init__.py  paths.py  rest.py  tsapp.py  urls.py  views.py
tileserver/application/static/js/: cesium.js
tileserver/application/static/styles/: cesium.css  geojs.css  style.css
tileserver/application/templates/: base.html  cesiumViewer.html  geojsViewer.html  tileviewer.html
tileserver/application/templates/_include/: cesium.html  geojs.html  roi.html  (+2 more)
tileserver/data/: aws_elevation_tiles_prod.xml  frmt_wms_bluemarble_s3_tms.xml
tileserver/templates/: base.html  tileviewer.html
tileserver/templates/_include/: roi.html  viewer.html
user-guide/: bokeh.html  compare.html  docker.html  example-data.html  expressions.html  formats.html  hillshade.html  in-memory.html  index.html  ipyleaflet_deep_zoom.html  mosaic.html  non-geo.html  rasterio.html  remote-cog.html  rgb.html  roi.html  spatial-subsets.html  stac.html  statistics.html  stretch.html  validate_cog.html  web-app.html  webview-frontends.html  xarray.html
(+8 files in other folders)
