[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "localtileserver"
version = "0.11.0"
description = "Locally serve geospatial raster tiles in the Slippy Map standard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Bane Sullivan", email = "hello@banesullivan.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click",
    "fastapi>=0.100.0",
    "uvicorn[standard]",
    "jinja2",
    "rio-tiler",
    "rio-cogeo",
    "requests",
    "server-thread",
    "scooby",
]

[project.optional-dependencies]
colormaps = [
    "matplotlib",
    "cmocean",
    "colorcet",
]
jupyter = [
    "jupyter-server-proxy",
    "ipyleaflet",
]
xarray = [
    "xarray",
    "rioxarray",
]
helpers = [
    "shapely",
]
test = [
    "pytest",
    "pytest-cov",
    "matplotlib",
    "folium",
    "ipyleaflet",
    "shapely",
]
doc = [
    "bokeh",
    "folium",
    "ipyleaflet",
    "jupyter-server-proxy",
    "jupyter-sphinx",
    "matplotlib",
    "pydata-sphinx-theme",
    "shapely",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-notfound-page",
]
dev = [
    "localtileserver[test,doc,colormaps,jupyter,xarray,helpers]",
    "pre-commit",
    "ruff",
]
all = [
    "localtileserver[colormaps,jupyter,xarray,helpers]",
]

[project.urls]
Documentation = "https://localtileserver.banesullivan.com"
"Bug Tracker" = "https://github.com/banesullivan/localtileserver/issues"
"Source Code" = "https://github.com/banesullivan/localtileserver"

[project.scripts]
localtileserver = "localtileserver.__main__:run_app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["localtileserver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["localtileserver"]
omit = [
    "localtileserver/web/sentry.py",
    "localtileserver/web/wsgi.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "except ImportError",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"*.ipynb" = ["E402", "E741"]
"doc/**" = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
